# mudnix

./: .gitignore  Cargo.toml  README.md  Rocket.toml  mudnix-mgr.py  replit.nix  setup.sh  users.json
items/: bar_of_soap.json
map/: Foo_Pond.json  Quux_Plains.json  template.json
message_queue/: 1654400002@Quux_Plains::northern_region@erMG8rQP.json
src/: entities.rs  game_endpoints.rs  main.rs  message.rs  mudnix_utils.rs  user.rs  user_endpoints.rs  world_map.rs
static/: index.html
