[package]
name = "mudnix"
version = "0.1.8"
authors = ["Dante J Falzone"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
sha2 = "0.10.2"
hex = "0.4.3"
serde = "1.0.136"
serde_json = "1.0.79"

# https://stackoverflow.com/a/54842093/10942736
[profile.dev]
panic = 'abort'     # Abort on panic
debug = false
